--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,8 +15,8 @@
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
     </android.support.v7.widget.Toolbar>
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/app_name"
         android:layout_width="match_parent"
@@ -35,14 +35,27 @@
 
     </android.support.v7.widget.Toolbar>
 
-
-    <fragment
-        android:id="@+id/contact_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.kcruz.contacts.ContactFragmentList"
-        >
+        android:orientation="horizontal">
 
-    </fragment>
+        <fragment
+            android:id="@+id/list"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:name="com.example.kcruz.contacts.ContactFragmentList">
+        </fragment>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/viewer">
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
