--- a/app/src/main/res/layout/fragment_list_contact.xml
+++ b/app/src/main/res/layout/fragment_list_contact.xml
@@ -14,8 +14,7 @@
     <TextView
         android:id="@android:id/empty"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#fff">
+        android:layout_height="wrap_content">
     </TextView>
 
 </LinearLayout>
