creacion de actividad para agregar contacto

--- a/app/src/main/res/layout/activity_contact_addition.xml
+++ b/app/src/main/res/layout/activity_contact_addition.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/orange_purple"
     android:orientation="vertical"
-    tools:context=".ContactEditActivity">
+    tools:context=".ContactAdditionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
