--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -35,12 +35,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/add_contact"
-                android:src="@drawable/ic_search_white_48dp"
-                android:layout_toLeftOf="@+id/add_contact" />
+                android:layout_toStartOf="@+id/img_add_contact"
+                android:src="@drawable/ic_search_white_48dp" />
 
             <ImageView
-                android:id="@+id/add_contact"
+                android:id="@+id/img_add_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
