--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0efccdcd</color>
-    <color name="colorPrimaryDark">#ff5722</color>
+    <color name="colorPrimary">#ad1457</color>
+    <color name="colorPrimaryDark">#880e4f</color>
     <color name="colorAccent">#404dff</color>
 </resources>
