--- a/app/src/main/res/layout-land/activity_contact_information.xml
+++ b/app/src/main/res/layout-land/activity_contact_information.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/orange_purple"
     android:orientation="vertical"
-    tools:context=".ContactInformationActivity">
+    tools:context=".activity.ContactInformationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,51 +20,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingRight="8dp">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-                    <RelativeLayout
-                        android:id="@+id/rel_toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <ImageView
-                            android:id="@+id/img_back"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentStart="true"
-                            android:layout_alignParentTop="true"
-                            android:src="@drawable/ic_arrow_back_white_48dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toRightOf="@+id/img_back"
-                            android:textColor="#fff"
-                            android:textSize="20sp"
-                            android:text="@string/contacts"/>
-
-                        <ImageView
-                            android:id="@+id/img_share"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentTop="true"
-                            android:src="@drawable/ic_more_vert_white_48dp" />
-
-                    </RelativeLayout>
-
-                </android.support.v7.widget.Toolbar>
-
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
             </LinearLayout>
 
             <LinearLayout
@@ -100,74 +64,18 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/contact_data_frame"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="#2ce1e0e0"
             android:paddingTop="16dp"
             android:orientation="vertical">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/custom_rectangle_shape">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingHorizontal="@dimen/text_margin"
-                    android:paddingTop="8dp"
-                    android:text="Phone number"
-                    android:textSize="14sp"
-                    />
-                <TextView
-                    android:id="@+id/first_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
-                    android:layout_marginHorizontal="@dimen/text_margin"
-                    android:text="7754-7889"
-                    android:textColor="#fff"
-                    android:textSize="14sp"
-                    />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/custom_rectangle_shape">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingHorizontal="@dimen/text_margin"
-                    android:paddingTop="8dp"
-                    android:text="Phone number"
-                    android:textSize="14sp"
-                    />
-                <TextView
-                    android:id="@+id/last_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
-                    android:layout_marginHorizontal="@dimen/text_margin"
-                    android:text="7754-7889"
-                    android:textColor="#fff"
-                    android:textSize="14sp"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:background="@drawable/custom_rectangle_shape">
                 <TextView
@@ -186,14 +94,66 @@
                     android:layout_marginHorizontal="@dimen/text_margin"
                     android:text="7754-7889"
                     android:textColor="#fff"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp"
+                    />
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="4dp"
+                android:background="@drawable/custom_rectangle_shape">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="@dimen/text_margin"
+                    android:paddingTop="8dp"
+                    android:text="Email"
+                    android:textSize="14sp"
+                    />
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:layout_marginHorizontal="@dimen/text_margin"
+                    android:text="7754-7889"
+                    android:textColor="#fff"
+                    android:textSize="14sp"
+                    />
 
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="4dp"
+                android:background="@drawable/custom_rectangle_shape">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="@dimen/text_margin"
+                    android:paddingTop="8dp"
+                    android:text="Birthday"
+                    android:textSize="14sp"
+                    />
+                <TextView
+                    android:id="@+id/birthday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:layout_marginHorizontal="@dimen/text_margin"
+                    android:text="7754-7889"
+                    android:textColor="#fff"
+                    android:textSize="14sp"
+                    />
 
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
-
-
 
 </LinearLayout>
