--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#ad1457</color>
     <color name="colorPrimaryDark">#880e4f</color>
-    <color name="colorAccent">#404dff</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="hintColor">#7fedecec</color>
 </resources>
